# multithreaded-chat

./: CMakeLists.txt  LICENSE  README.md
client/src/: client.c  client.h
server/src/: server.c  server.h
